# prompt-flow

./: .gitignore  README.md  README.zh-CN.md  components.json  index.html  package-lock.json  package.json
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  prompt_flow_stop.ps1
src/components/: AppLogo.vue  PromptPicker.vue  SettingsPage.vue
src/components/ui/button/: Button.vue
src/components/ui/input/: Input.vue
src/components/ui/textarea/: Textarea.vue
